Filter students file and skip empty lines